--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -402,6 +402,13 @@
 	#ctraddon_navigator-throbber[cui-areatype="menu-panel"]{
 	  margin-top:-30px !important;
 	}
+
+	#ctraddon_navigator-throbber {
+	  visibility: collapse;
+	}
+	#wrapper-ctraddon_navigator-throbber {
+	  display: none;
+	}
 	
 	/* show missing icon */
 	#main-window[defaultfxtheme="true"] #appmenu_unsortedBookmarks,
@@ -763,8 +770,7 @@
 	
 	#ctraddon_pw_closeicon radio image ,
 	#ctraddon_pw_closeicong radio image {
-	  width: 22px;
-	  padding: 2px 2px;
+	  width: 16px;
 	}
 
 	#ctraddon_closeicon_red, #ctraddon_closeicong_red,
@@ -774,8 +780,8 @@
 	#ctraddon_closeicon_w10i, #ctraddon_closeicong_w10i,
 	#ctraddon_closeicon_w10red, #ctraddon_closeicong_w10red,
 	#ctraddon_closeicon_gc, #ctraddon_closeicong_gc {
-	  margin-left: -4px;
-	  margin-right: -4px;
+	  -moz-margin-start: -3px;
+	  -moz-margin-end: -4px;
 	}
 
 	#ctraddon_pw_closeicon radio .radio-check-box1,
@@ -784,18 +790,16 @@
 	#ctraddon_pw_closeicong #ctraddon_closeicong_def image {
 	  display: none;
 	}
-	#ctraddon_pw_closeicon #ctraddon_closeicon_def:not([selected="true"]) label,
-	#ctraddon_pw_closeicon radio:not([selected="true"]) image,
-	#ctraddon_pw_closeicong #ctraddon_closeicong_def:not([selected="true"]) label,
-	#ctraddon_pw_closeicong radio:not([selected="true"]) image{
+
+	#ctraddon_pw_closeicon radio:not([selected="true"]) .radio-label-box,
+	#ctraddon_pw_closeicong radio:not([selected="true"]) .radio-label-box{
 	  border: 1px solid transparent;
 	}
-	#ctraddon_pw_closeicon #ctraddon_closeicon_def[selected="true"] label,
-	#ctraddon_pw_closeicon radio[selected="true"] image,
-	#ctraddon_pw_closeicon #ctraddon_closeicon_def:not([selected="true"]):hover label,
-	#ctraddon_pw_closeicong #ctraddon_closeicong_def[selected="true"] label,
-	#ctraddon_pw_closeicong radio[selected="true"] image,
-	#ctraddon_pw_closeicong #ctraddon_closeicong_def:not([selected="true"]):hover label {
+
+	#ctraddon_pw_closeicon radio[selected="true"] .radio-label-box,
+	#ctraddon_pw_closeicon radio:not([selected="true"]):hover .radio-label-box,
+	#ctraddon_pw_closeicong radio[selected="true"] .radio-label-box,
+	#ctraddon_pw_closeicong radio:not([selected="true"]):hover .radio-label-box {
 	  border: 1px solid Highlight;
 	}
 
@@ -843,22 +847,21 @@
 	#ctraddon_tabsep_white_sol,
 	#ctraddon_tabsep_black_sol2,
 	#ctraddon_tabsep_white_sol2{
-	  margin-left: -4px;
-	  margin-right: -4px;
+	  -moz-margin-start: -3px;
+	  -moz-margin-end: -4px;
 	}
 	
 	#ctraddon_pw_tabseparator radio .radio-check-box1,
 	#ctraddon_pw_tabseparator #ctraddon_tabsep_def image {
 	  display: none;
 	}
-	#ctraddon_pw_tabseparator #ctraddon_tabsep_def:not([selected="true"]) label,
-	#ctraddon_pw_tabseparator radio:not([selected="true"]) image{
+
+	#ctraddon_pw_tabseparator radio:not([selected="true"]) .radio-label-box{
 	  border: 1px solid transparent;
 	}
-	#ctraddon_pw_tabseparator #ctraddon_tabsep_def[selected="true"] label,
-	#ctraddon_pw_tabseparator radio[selected="true"] image,
-	#ctraddon_pw_tabseparator #ctraddon_tabsep_def:not([selected="true"]):hover label,
-	#ctraddon_pw_tabseparator radio:not([selected="true"]):hover image {
+
+	#ctraddon_pw_tabseparator radio[selected="true"] .radio-label-box,
+	#ctraddon_pw_tabseparator radio:not([selected="true"]):hover .radio-label-box {
 	  border: 1px solid Highlight;
 	}
 	#ctraddon_pw_tabseparator radio image {
@@ -913,7 +916,7 @@
 	}
 
 	#ctraddon_pw_activitythrobber label {
-	  background:url('chrome://classic_theme_restorer/content/images/throbber_notloading.png') no-repeat left !important;
+	  background:url('chrome://classic_theme_restorer/content/images/throbber_loading.png') no-repeat left !important;
 	  padding-left:20px !important;
 	  min-height:16px !important;
 	}
@@ -927,6 +930,12 @@
 	
 	#ctraddon_pw_hideurlgo label {
 	  background:url('chrome://classic_theme_restorer/content/images/urlgo.png') no-repeat left !important;
+	  padding-left:20px !important;
+	  min-height:16px !important;
+	}
+	
+	#ctraddon_pw_hideurlsrg label {
+	  background: url('chrome://classic_theme_restorer/content/images/urlsrg_sep.png') no-repeat left !important;
 	  padding-left:20px !important;
 	  min-height:16px !important;
 	}
@@ -1014,33 +1023,45 @@
 	}
 	
 	/* Padlock icons */
-	#ctraddon_pw_padlock_default label{
-	  background: -moz-image-rect(url('chrome://classic_theme_restorer/content/images/padlock_default1.png'),
-				  0, 16, 16, 0) no-repeat left !important;
-	  padding-left:20px !important;
+	#ctraddon_pw_padlock_default{
+	  list-style-image:url('chrome://classic_theme_restorer/content/images/padlock_default1.png');
+      -moz-image-region: rect(0px, 16px, 16px, 0px);
 	}
-	#ctraddon_padlock_list[value="padlock_default"] {
-	 list-style-image:url('chrome://classic_theme_restorer/content/images/padlock_default1.png');
-	 -moz-image-region: rect(0, 16px, 16px, 0);
-	}
-	#ctraddon_pw_padlock_classic label{
-	  background:url('chrome://classic_theme_restorer/content/images/padlock_classic.png') no-repeat left !important;
-	  padding-left:20px !important;
-	}
-	#ctraddon_padlock_list[value="padlock_classic"] {
+	#ctraddon_pw_padlock_classic{
 	  list-style-image:url('chrome://classic_theme_restorer/content/images/padlock_classic.png');
 	}
-	#ctraddon_pw_padlock_modern label{
-	  background:url('chrome://classic_theme_restorer/content/images/padlock_modern.png') no-repeat left !important;
-	  padding-left:20px !important;
-	}
-	#ctraddon_padlock_list[value="padlock_modern"] {
+	#ctraddon_pw_padlock_modern{
 	  list-style-image:url('chrome://classic_theme_restorer/content/images/padlock_modern.png');
 	}
-	#ctraddon_pw_padlock_none label{
-	  padding-left:20px !important;
+	
+	#ctraddon_pw_padlock_default,
+	#ctraddon_pw_padlock_classic,
+	#ctraddon_pw_padlock_modern,
+	#ctraddon_pw_padlock_none{
+	  margin-left: -3px;
+	  margin-right: -3px;
+	}
+	
+	#ctraddon_padlock_radio radio .radio-check-box1 {
+	  display: none;
+	}
+	#ctraddon_padlock_radio #ctraddon_pw_padlock_none image {
+	  visibility: hidden;
 	}
 
+	#ctraddon_padlock_radio radio:not([selected="true"]).radio-label-box {
+	  border: 1px solid transparent;
+	}
+	#ctraddon_padlock_radio radio[selected="true"] .radio-label-box,
+	#ctraddon_padlock_radio radio:not([selected="true"]):hover .radio-label-box{
+	  border: 1px solid Highlight;
+	}
+	
+	#ClassicTRoptionsPane[defaultfxtheme="true"] #ctraddon_padlock_radio {
+	  background: #dfdfdf;
+	}
+	
+	/* tab audio icon */
 	#ctraddon_pw_tabsaudioico label{
 	  background:url('chrome://classic_theme_restorer/content/images/tabaudio.png') no-repeat left !important;
 	  padding-left:20px !important;
@@ -1066,9 +1087,13 @@
 	#ctraddon_pw_tabthrobber_f39{
 	  list-style-image:url('chrome://classic_theme_restorer/content/images/throbber-loading-fx39.png');
 	}
+	#ctraddon_pw_tabthrobber_nav{
+	  list-style-image:url('chrome://classic_theme_restorer/content/images/throbber_loading.png');
+	}
 
 	#ctraddon_pw_tabthrobber_alt,
-	#ctraddon_pw_tabthrobber_f39 {
+	#ctraddon_pw_tabthrobber_f39,
+	#ctraddon_pw_tabthrobber_nav{
 	  margin-left: -1px;
 	  margin-right: -1px;
 	}
