--- a/xpi/content/css/mac/overlayextra.css
+++ b/xpi/content/css/mac/overlayextra.css
@@ -1,7 +1,5 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
-@-moz-document url(chrome://browser/content/browser.xul) {
-
 	#ctraddon_bookmarks-menu-toolbar-button,
 	#ctraddon_bookmarks-button {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/bookmarks_mac.png");
@@ -211,43 +209,9 @@
 	  visibility:collapse !important;
 	  display:none !important;
 	}
-}
 
-.ctraddon_winlinonly,
-.ctraddon_linuxonly,
-.ctraddon_windowsonly{
-  visibility: collapse !important;
-}
-
-@-moz-document url(chrome://classic_theme_restorer/content/options.xul) {
-	#ctraddon_appbutton_list2{
-	  visibility: visible !important;
-	}
-	#ctraddon_pw_nbcompact,
-	#ctraddon_pw_menubargroup,
-	#ctraddon_pw_menubarnofog,
-	#ctraddon_pw_altmenubar,
-	#ctraddon_wincontrols,
-	#ctraddon_appbutton_list1{
+	#main-window .ctraddon_winlinonly,
+	#main-window .ctraddon_linuxonly,
+	#main-window .ctraddon_windowsonly{
 	  visibility: collapse !important;
-	  display:none !important;
 	}
-	
-	#ClassicTRoptionsPane .ctraddontabpanel {
-	  height:410px;
-	  max-height:440px;
-	  width:500px;
-	  max-width:600px;
-	}
-	#ctraddon_pw_starinurl label{
-	  background: -moz-image-rect(url('chrome://classic_theme_restorer/content/images/starbutton1osx.png'),
-				  0, 72, 18, 36) no-repeat left !important;
-	  -moz-padding-start:20px !important;
-	  min-height:16px !important;
-	}
-	#ctraddon_pw_feedinurl label{
-	  background:url('chrome://classic_theme_restorer/content/images/feedinurlbar_mac.png') no-repeat left !important;
-	  -moz-padding-start:20px !important;
-	  min-height:16px !important;
-	}
-}
