--- a/xpi/content/css/winaero/overlayextra.css
+++ b/xpi/content/css/winaero/overlayextra.css
@@ -1,7 +1,5 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
-@-moz-document url(chrome://browser/content/browser.xul) {
-	
 	#ctraddon_bookmarks-menu-toolbar-button,
 	#ctraddon_bookmarks-button{
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/bookmarks.png");
@@ -421,42 +419,8 @@
 	  border-bottom: 1px solid rgba(0,0,0,.15) !important;
 	}
 
-}
-
-.ctraddon_nonwindows,
-.ctraddon_linuxonly,
-.ctraddon_maconly{
-  visibility: collapse !important;
-}
-
-@-moz-document url(chrome://classic_theme_restorer/content/options.xul) {
-	#ctraddon_appbutton_list1{
-	  visibility: visible !important;
-	}
-	#ctraddon_appbutton_list2{
+	#main-window .ctraddon_nonwindows,
+	#main-window .ctraddon_linuxonly,
+	#main-window .ctraddon_maconly{
 	  visibility: collapse !important;
-	  display:none !important;
 	}
-	
-	@media not all and (-moz-windows-glass) {
-		#ctraddon_pw_menubarnofog{
-		  visibility: collapse !important;
-		  display:none !important;
-		}
-	}
-	#ctraddon_pw_okbutton{
-	  display: inline !important;
-	}
-
-	#ctraddon_pw_starinurl label{
-	  background: -moz-image-rect(url('chrome://classic_theme_restorer/content/images/starbutton1.png'),
-				  0, 72, 18, 36) no-repeat left !important;
-	  -moz-padding-start:20px !important;
-	  min-height:16px !important;
-	}
-	#ctraddon_pw_feedinurl label{
-	  background:url('chrome://classic_theme_restorer/content/images/feedinurlbar.png') no-repeat left !important;
-	  -moz-padding-start:20px !important;
-	  min-height:16px !important;
-	}
-}
