--- a/xpi/content/overlay_prefs.css
+++ b/xpi/content/overlay_prefs.css
@@ -481,6 +481,7 @@ radio.ctraddontab .radio-check-box1 {
 }
 
 #ctraddon_pw_altoptionsp label,
+#ctraddon_pw_altoptionsw label,
 #ctraddon_pw_oldprefs label {
   background:url('chrome://classic_theme_restorer/content/images/prefs_incontent.png') no-repeat left !important;
   padding-left:20px !important;
