--- a/xpi/content/css/appbutton2io.css
+++ b/xpi/content/css/appbutton2io.css
@@ -9,6 +9,8 @@
     #ctraddon_appbutton2 > .toolbarbutton-icon {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/appbutton-inv.png") !important;
       padding: 0 9px !important;
+      margin-top: -0.5px !important;
+      margin-bottom: -0.5px !important;
 	}
 	
 	#ctraddon_appbutton2{
