--- a/xpi/content/css/hidenavbar.css
+++ b/xpi/content/css/hidenavbar.css
@@ -1,6 +1,35 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
 @-moz-document url(chrome://browser/content/browser.xul) {
+
+	#main-window:not([customizing]) #nav-bar-customization-target,
+	#main-window:not([customizing]) #nav-bar-overflow-button {
+	  margin-top: unset !important;
+	  margin-bottom: unset!important;
+	}
+	#main-window:not([customizing]) #nav-bar-customization-target #urlbar-container,
+	#main-window:not([customizing]) #nav-bar-customization-target #search-container {
+	  margin-top: unset !important;
+	  margin-bottom: unset !important;
+	}
+	
+	#main-window:not([customizing]) #nav-bar toolbarseparator {
+	  margin-top: unset !important;
+	  margin-bottom: unset !important;
+	}
+
+	#main-window:not([customizing]) #nav-bar #ctraddon_puib_separator{
+	  margin-top: unset !important;
+	  margin-bottom: unset !important;
+	}
+	
+	#main-window:not([customizing]) #nav-bar #ctraddon_back-forward-dropmarker{
+	  margin-top: unset !important;
+	  margin-bottom: unset !important;
+	  padding-top: unset !important;
+	  padding-bottom: unset !important;
+	}
+
 	#main-window:not([customizing]):not([tabsontop="false"]) #nav-bar{
 	  min-height:2px !important;
 	  height:2px !important;
