--- a/xpi/content/css/urlbar_dropm.css
+++ b/xpi/content/css/urlbar_dropm.css
@@ -4,5 +4,9 @@
 	.urlbar-history-dropmarker{
 	  -moz-box-ordinal-group:100 !important;
 	}
+	
+	#urlbar:not(:hover) > .urlbar-textbox-container > .urlbar-history-dropmarker {
+	  opacity: 1 !important;
+	}
 
 }
