--- a/xpi/content/css/win8/overlayprefs_extra.css
+++ b/xpi/content/css/win8/overlayprefs_extra.css
@@ -33,3 +33,30 @@
   display: none !important;
   visibility: collapse !important;
 }
+
+#ctraddon_closeicon_red, #ctraddon_closeicong_red,
+#ctraddon_closeicon_w7, #ctraddon_closeicong_w7,
+#ctraddon_closeicon_w8, #ctraddon_closeicong_w8,
+#ctraddon_closeicon_w10, #ctraddon_closeicong_w10,
+#ctraddon_closeicon_w10i, #ctraddon_closeicong_w10i,
+#ctraddon_closeicon_w10red, #ctraddon_closeicong_w10red,
+#ctraddon_closeicon_gc, #ctraddon_closeicong_gc,
+#ctraddon_tabsep_black,
+#ctraddon_tabsep_white,
+#ctraddon_tabsep_luna,
+#ctraddon_tabsep_xp,
+#ctraddon_tabsep_black_sol,
+#ctraddon_tabsep_white_sol,
+#ctraddon_tabsep_black_sol2,
+#ctraddon_tabsep_white_sol2{
+  -moz-margin-start: -3px;
+  -moz-margin-end: -4px;
+}
+
+#ctraddon_pw_padlock_default,
+#ctraddon_pw_padlock_classic,
+#ctraddon_pw_padlock_modern,
+#ctraddon_pw_padlock_none{
+  margin-left: -3px;
+  margin-right: -3px;
+}
