--- a/xpi/content/css/addonversion.css
+++ b/xpi/content/css/addonversion.css
@@ -1,7 +1,5 @@
-@-moz-document url(about:addons) {
-	/*  addonversion.xml contains a copy of the 'addon-generic' binding Mozilla removed from current
-		Nightly builds (Fx41+) for no valid reason!
-	*/
+@-moz-document url-prefix(chrome://mozapps/content/extensions/extensions.xul), url-prefix(about:addons) {
+	/*  addonversion.xml contains a copy of the 'addon-generic' binding Mozilla removed from Fx40+ builds!*/
 	
 	.addon:not([type="userstyle"]):not([pending="uninstall"])[status="installed"]	{
 	  -moz-binding: url("chrome://classic_theme_restorer/content/addonversion.xml#addon-generic") !important;
