--- a/xpi/content/css/winaero/classictabsextrac2.css
+++ b/xpi/content/css/winaero/classictabsextrac2.css
@@ -77,8 +77,8 @@
 		@media all and (-moz-windows-glass) {
 			#navigator-toolbox #nav-bar:not(:-moz-lwtheme){
 			  box-shadow:none !important;
-			  border-top: 2px solid !important;
-			  -moz-border-top-colors:transparent grey !important;
+			  /*border-top: 2px solid !important;
+			  -moz-border-top-colors:transparent grey !important;*/
 			}
 		}
 		@media not all and (-moz-windows-glass) {
@@ -94,6 +94,10 @@
 		  box-shadow:none !important;
 		  border-top: 1px solid transparent !important;
 		}
+	}
+	
+	#TabsToolbar:not([tabsontop="false"]):not(:-moz-lwtheme) {
+	  margin-bottom:0px !important;
 	}
 	
 	/* Tabs toolbar tab close button (Fx31+) */
