--- a/xpi/content/css/winxp/classictabsextrac2.css
+++ b/xpi/content/css/winxp/classictabsextrac2.css
@@ -60,6 +60,9 @@
 	  box-shadow:none !important;
 	  border-top: 1px solid transparent !important;
 	}
+	#TabsToolbar:not([tabsontop="false"]):not(:-moz-lwtheme) {
+	  margin-bottom:0px !important;
+	}
 
 	/* Tabs toolbar tab close button (Fx31+) */
 	#ctraddon_tabs-closebutton{
