--- a/xpi/content/overlay_prefs.css
+++ b/xpi/content/overlay_prefs.css
@@ -510,7 +510,8 @@ radio.ctraddontab .radio-check-box1 {
 
 #ctraddon_pw_alt_addonsp label,
 #ctraddon_pw_addonversion label,
-#ctraddon_pw_am_nowarning label {
+#ctraddon_pw_am_nowarning label,
+#ctraddon_pw_am_compact label {
   background:url('chrome://classic_theme_restorer/content/images/appmenu_addons_lin.png') no-repeat left !important;
   padding-left:20px !important;
   min-height:16px !important;
