--- a/xpi/content/overlay_prefs.css
+++ b/xpi/content/overlay_prefs.css
@@ -431,6 +431,7 @@ radio.ctraddontab .radio-check-box1 {
 #ctraddon_starinurl_info {
   background:url('chrome://classic_theme_restorer/content/images/bookmarksbutton_default.png') no-repeat left !important;
   padding-left:36px !important;
+  min-height:16px !important;
 }
 
 #ctraddon_pw_hideurelstop label{
