--- a/xpi/content/css/am_compact.css
+++ b/xpi/content/css/am_compact.css
@@ -124,8 +124,8 @@
 
 	/********************/
 	.addon{
-	  padding-top: unset !important;
-	  padding-bottom: unset !important;
+	  /*padding-top: unset !important;
+	  padding-bottom: unset !important;*/
 	}
 	.addon .warning,
 	.addon .error,
