--- a/xpi/content/css/invicons_navbar.css
+++ b/xpi/content/css/invicons_navbar.css
@@ -16,8 +16,7 @@
 	  list-style-image: url("chrome://browser/skin/syncProgress-toolbar-inverted.png") !important;
 	}
 	#nav-bar #downloads-button:not([attention]) > #downloads-indicator-anchor > #downloads-indicator-icon {
-	  background: -moz-image-rect(url("chrome://browser/skin/Toolbar-inverted.png"),
-								  0, 198, 18, 180) center no-repeat !important;
+	  background: -moz-image-rect(url("chrome://browser/skin/Toolbar-inverted.png"), 0, 198, 18, 180) center no-repeat !important;
 	}
 	#nav-bar #downloads-button:not([counter]):not([attention]) > #downloads-indicator-anchor > #downloads-button-progress-area > #downloads-indicator-counter {
 	  background-image: -moz-image-rect(url("chrome://browser/skin/Toolbar-inverted.png"), 0, 198, 18, 180) !important;
@@ -85,6 +84,10 @@
 		  list-style-image: url("chrome://browser/skin/syncProgress-toolbar-inverted@2x.png") !important;
 		}
 		#main-window[fx40plus="true"] #nav-bar #downloads-button:not([attention]) > #downloads-indicator-anchor > #downloads-indicator-icon {
+		  background: -moz-image-rect(url("chrome://browser/skin/Toolbar-inverted@2x.png"), 0, 396, 36, 360) center no-repeat !important;
+		  background-size: 18px !important;
+		}
+		#main-window[fx40plus="true"] #nav-bar #downloads-button:not([counter]):not([attention]) > #downloads-indicator-anchor > #downloads-button-progress-area > #downloads-indicator-counter {
 		  background-image: -moz-image-rect(url("chrome://browser/skin/Toolbar-inverted@2x.png"), 0, 396, 36, 360) !important;
 		}
 		#main-window[fx40plus="true"] #nav-bar #downloads-button[attention] > #downloads-indicator-anchor > #downloads-indicator-icon {
@@ -132,7 +135,7 @@
 		#main-window[fx40plus="true"] #nav-bar #ctraddon_bookmarks-menu-toolbar-button .toolbarbutton-icon {
 		  width: 40px !important;
 		}
-		#main-window[fx40plus="true"] #nav-bar #downloads-button .toolbarbutton-icon,
+		/*#main-window[fx40plus="true"] #nav-bar #downloads-button .toolbarbutton-icon,*/
 		#main-window[fx40plus="true"] #nav-bar #ctraddon_bookmarks-button .toolbarbutton-icon {
 		  width: 32px !important;
 		}
