--- a/xpi/content/css/oldsearch.css
+++ b/xpi/content/css/oldsearch.css
@@ -62,5 +62,10 @@
 	.addengine-item {
 	  padding: unset !important;
 	}
+	
+	/* location bars footer */
+	#urlbar-search-footer{
+	  display:none !important;
+	}
 
 }
