--- a/xpi/content/css/winaero/smallnavbutextra.css
+++ b/xpi/content/css/winaero/smallnavbutextra.css
@@ -164,6 +164,27 @@
 		}
 
 	}
+
+	@media all and (-moz-windows-classic) {
+
+		#nav-bar .toolbarbutton-1:not([disabled]):hover {
+		  box-shadow:	inset 0 1px white,
+						inset 0 -1px #808080,
+						inset 1px 0 white,
+						inset -1px 0 #808080 !important;
+		  border-radius: 0px !important;
+		}
+		#nav-bar .toolbarbutton-1:not([disabled])[checked],
+		#nav-bar .toolbarbutton-1:not([disabled])[open],
+		#nav-bar .toolbarbutton-1:not([disabled]):active {
+		  box-shadow:	inset 0 1px #808080,
+						inset 0 -1px white,
+						inset 1px 0 #808080,
+						inset -1px 0 white !important;
+		  border-radius: 0px !important;
+		}
+
+	}
 	
 	#nav-bar .toolbarbutton-1 {
       min-width:22px !important;
