--- a/xpi/content/css/winxp/smallnavbutextra.css
+++ b/xpi/content/css/winxp/smallnavbutextra.css
@@ -88,6 +88,7 @@
 				  inset 0px 12px 0px 0px rgba(255,255,255,0.5)  !important;
 	  border-radius: 3px !important;
 	}
+
 	#nav-bar .toolbarbutton-1:not([disabled])[checked],
 	#nav-bar .toolbarbutton-1:not([disabled])[open],
 	#nav-bar .toolbarbutton-1:not([disabled]):active {
@@ -97,6 +98,27 @@
 				  inset 0px 0px 4px rgba(0,0,0,0.7),
 				  inset 0px 12px 0px 0px rgba(255,255,255,0.5) !important;
 	  border-radius: 3px !important;
+	}
+	
+	@media all and (-moz-windows-classic) {
+
+		#nav-bar .toolbarbutton-1:not([disabled]):hover {
+		  box-shadow:	inset 0 1px white,
+						inset 0 -1px #808080,
+						inset 1px 0 white,
+						inset -1px 0 #808080 !important;
+		  border-radius: 0px !important;
+		}
+		#nav-bar .toolbarbutton-1:not([disabled])[checked],
+		#nav-bar .toolbarbutton-1:not([disabled])[open],
+		#nav-bar .toolbarbutton-1:not([disabled]):active {
+		  box-shadow:	inset 0 1px #808080,
+						inset 0 -1px white,
+						inset 1px 0 #808080,
+						inset -1px 0 white !important;
+		  border-radius: 0px !important;
+		}
+
 	}
 	
 	#navigator-toolbox #nav-bar .toolbarbutton-1 > .toolbarbutton-menubutton-button,
