--- a/xpi/content/css/alt_optionswindow.css
+++ b/xpi/content/css/alt_optionswindow.css
@@ -7,7 +7,8 @@
 	  top:0px !important;
 	  background: inherit !important;
 	}
-
+	
+	#category-search[hidden="true"],
 	#mainPrefPane .header {
 	  display: none !important;
 	}
