--- a/xpi/content/css/appbutton2io2.css
+++ b/xpi/content/css/appbutton2io2.css
@@ -46,6 +46,22 @@
 		  padding: 1px 9px !important;
 		}
 	}
+	
+	@media (min-resolution: 1.1dppx) {
+	
+	  @media (-moz-os-version: windows-win8) {
+		#main-window[tabsintitlebar][sizemode="maximized"][fx40plus="true"] #ctraddon_appbutton2 > .toolbarbutton-icon {
+			margin-top:-1.5px !important;
+		}
+	  }
+
+	  @media (-moz-os-version: windows-win10) {
+		#main-window[tabsintitlebar][sizemode="maximized"][fx40plus="true"] #ctraddon_appbutton2 > .toolbarbutton-icon {
+		  margin-top:-1.5px !important;
+		}
+	  }
+
+	}
 
 	#ctraddon_appbutton2 > .toolbarbutton-menu-dropmarker{
       visibility: collapse !important;
